+ArrayDeqFull (except. descendingIterator) + AVLTree(remove)