@@ -12,6 +12,7 @@ import ru.mail.polis.collections.set.hash.todo.Student;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -26,7 +27,7 @@ import java.util.stream.IntStream;
 @FixMethodOrder(MethodSorters.NAME_ASCENDING)
 public class TestHashTable extends AbstractSetTest {
 
-    private final List<IOpenHashTableEntity> entities = List.of(
+    private final List<IOpenHashTableEntity> entities = Arrays.asList(
             //uniq
             new Student(0, "A", "CDCD", Student.Gender.MALE, LocalDate.of(1990, 1, 1), 1000),
             new Student(0, "AA", "CCDD", Student.Gender.FEMALE, LocalDate.of(1993, 2, 2), 1001),
@@ -64,7 +65,7 @@ public class TestHashTable extends AbstractSetTest {
     @Before //Запускается перед запуском каждого теста
     public void createSortedSets() {
         validSet = new HashSet<>();
-        testSet = new OpenHashTable<>();
+        testSet = new OpenHashTable<>(IOpenHashTableEntity.class);
     }
 
     @Test
